Populate initial players in cpp and java runner game responses.